Fix sidebar arrow icon not showing on sub menu when collapse

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -82,3 +82,7 @@
 .el-range-separator {
   box-sizing: content-box;
 }
+
+.el-submenu__title i {
+  color: $menuText;
+}
