--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -83,10 +83,6 @@
     }
   }
 
-  .el-submenu__icon-arrow {
-    color: $menuText;
-  }
-
   .hideSidebar {
     .sidebar-container {
       width: 54px !important;
